# hexgate

./: Cargo.toml  README  README.md  hexgate_protocol.drawio
examples/: chat_client.rs  chat_server.rs  info.rs
src/: lib.rs
src/client/: mod.rs  thread.rs
src/common/: mod.rs  timed_event_queue.rs
src/common/channel/: mod.rs  scheduler.rs  unreliable.rs  unreliable_ordered.rs
src/common/channel/reliable/: assembler.rs  disassembler.rs  mod.rs
src/common/congestion/: mod.rs
src/common/crypto/: mod.rs  sym.rs
src/common/packets/: acks.rs  client_hello.rs  connection_request.rs  connection_response.rs  disconnect.rs  info_request.rs  info_response.rs  latency_discovery.rs  latency_discovery_response.rs  latency_discovery_response_2.rs  login_request.rs  login_response.rs  mod.rs  reliable_payload.rs  server_hello.rs  unreliable_payload.rs
src/common/socket/: mod.rs  net_sym.rs
src/server/: auth.rs  connection.rs  mod.rs  thread.rs
