[package]
name = "hexgate"
version = "0.0.1"
edition = "2021"
authors = ["alexdesander <alexdesander@tuta.io>"]
description = "Efficient and easy-to-use udp based client-server game networking crate"
keywords = ["networking", "gamedev", "multiplayer", "netcode", "udp"]
categories = ["game-development", "game-engines", "network-programming"]
license = "MPL-2.0"
readme = "README.md"

[dependencies]
aes-gcm = "0.10.3"
ahash = "0.8.11"
argon2 = "0.5.3"
bon = "3.1.1"
chacha20poly1305 = "0.10.1"
crossbeam = "0.8.4"
ed25519-dalek = "2.1.1"
hkdf = "0.12.4"
integer-encoding = "4.0.2"
mio = { version = "1.0.2", features = ["net", "os-poll"] }
rand = "0.8.5"
sha2 = "0.10.8"
siphasher = "1.0.1"
socket2 = { version = "0.5.8", features = ["all"] }
thiserror = "2.0.3"
x25519-dalek = { version = "2.0.1", features = ["reusable_secrets"] }
rand_xoshiro = "0.6.0"
bitvec = "1.0.1"
priority-queue = "2.1.1"
either = "1.13.0"

[dev-dependencies]
anyhow = "1.0.93"
text_io = "0.1.12"
